--- a/index.html
+++ b/index.html
@@ -30,17 +30,30 @@
 
     <h1>Results:</h1>
     <p>Linux:
-        <span id="linuxvotes">0</span>
+        <span id="linuxvotes"></span>
         votes
     </p>
     <p>Mac OS:
-        <span id="macosvotes">1</span>
+        <span id="macosvotes"></span>
         votes
     </p>
     <p>Windows:
-        <span id="windows">3</span>
+        <span id="windows"></span>
         votes
     </p>
 
+    <script>
+        window.onload = () => {
+            fetch('/poll').then((results) => {
+                results.json().then((data) => {
+                    for (x in data) {
+                        console.log(x);
+                        console.log(data[x]);
+                        document.getElementById(x + 'votes').innerText = data[x];
+                    }
+                })
+            })
+        }
+    </script>
 </body>
 </html>
